package uqam.team17.medical_records_service.model;

public class Ramq {
    void registerPerson() {
    }

    void createMedicalRecord() {
    }

    MedicalRecord reconstructMedicalRecord() {
        return new MedicalRecord();
    }
}

